# pixbox

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/pixbox/: __init__.py
src/pixbox/core/: color_primaries.py  color_range.py  color_space.py  color_transfer.py  pixel_format.py
tests/core/: test_color_primaries.py  test_color_range.py  test_color_space.py  test_color_transfer.py  test_pixel_format.py
