[project]
name = "pixbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "longhaiyoushi", email = "zhangqinghao163@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pixbox = "pixbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]
